# template_glfw

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.c
